--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1140,110 +1140,6 @@ footer {
     }
 }
 
-@media screen and (min-width:690px) and (max-width: 750px) {
-    .container-background .header_page__header {
-        width: 600px;
-        height: 300px;
-        position: absolute;
-        top: 40%;
-        left: 10%;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-    .container-background .header_page__header .header_page__h2 {
-        font-family: Montserrat;
-        font-size: 52px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 63px;
-        letter-spacing: 0px;
-        text-align: center;
-    }
-    .container-background .header_page__header .header__page_p {
-        font-family: Roboto;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 25px;
-        letter-spacing: 0px;
-        text-align: center;
-    }
-    .container,
-    .container-md,
-    .container-sm {
-        max-width: 812px;
-    }
-    .container .types-of-work {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-around;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        margin-top: 3%;
-    }
-    .images-people_group .people_group {
-        width: 34%;
-        display: flex;
-        justify-content: center;
-        display: flex;
-        flex-wrap: wrap;
-        height: 300px;
-    }
-    .images-people_group {
-        width: 89%;
-        height: 609px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-top: 3%;
-        margin-left: 7%;
-        flex-wrap: wrap;
-    }
-    .container .types-of-work .first-types {
-        width: 236px;
-        height: 400px;
-        background-image: url('../images/Step next.png');
-        position: relative;
-        display: flex;
-        align-self: flex-end;
-        justify-content: center;
-    }
-    .container .types-of-work .second-types {
-        width: 236px;
-        height: 400px;
-        background-image: url('../images/Step\ 1\ image.png');
-        position: relative;
-        display: flex;
-        align-self: flex-end;
-        justify-content: center;
-    }
-    .container .types-of-work .third-types {
-        width: 236px;
-        height: 400px;
-        background-image: url('../images/Step\ foot.png');
-        position: relative;
-        display: flex;
-        align-self: flex-end;
-        justify-content: center;
-    }
-    nav .main_picture .picture {
-        width: 236px;
-        height: 310px;
-        margin-left: 5px;
-        margin-top: 5px;
-        border-radius: 4px;
-    }
-    nav .main_picture .picture_next-big {
-        width: 492px;
-        height: 310px;
-        margin-left: 5px;
-        margin-top: 5px;
-        border-radius: 4px;
-    }
-}
-
 @media screen and (min-width:320px) and (max-width: 380px) {
     .container-background .header_page__header {
         width: 271px;
@@ -1956,6 +1852,244 @@ footer {
 }
 
 @media screen and (min-width:470px) and (max-width: 600px) {
+    .container-background .header_page__header {
+        width: 271px;
+        height: 178px;
+        position: absolute;
+        top: 40%;
+        left: 27%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    .menu {
+        height: 50px;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 3%;
+    }
+    .menu .righ {
+        display: none;
+    }
+    .container-background .header_page__header .header_page__h2 {
+        font-family: Montserrat;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 36px;
+        letter-spacing: 0px;
+        text-align: center;
+    }
+    .container-background .header_page__header .header__page_p {
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 25px;
+        letter-spacing: 0px;
+        text-align: center;
+    }
+    // .container,
+    // .container-md,
+    // .container-sm {
+    //     max-width: 812px;
+    // }
+    .container .types-of-work {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-top: 3%;
+    }
+    .images-people_group .people_group {
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        height: 300px;
+    }
+    .images-people_group {
+        width: 89%;
+        height: 1200px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 3%;
+        margin-left: 7%;
+        flex-wrap: wrap;
+    }
+    .container .types-of-work .first-types {
+        width: 300px;
+        height: 240px;
+        background-image: url('../images/Step next.png');
+        position: relative;
+        display: flex;
+        align-self: flex-end;
+        justify-content: center;
+        background-size: cover;
+        background-position: center;
+    }
+    .container .types-of-work .second-types {
+        width: 300px;
+        height: 240px;
+        background-image: url('../images/Step\ 1\ image.png');
+        position: relative;
+        display: flex;
+        align-self: flex-end;
+        justify-content: center;
+        background-size: cover;
+        background-position: center;
+        margin-top: 10px;
+    }
+    .container .types-of-work .third-types {
+        width: 300px;
+        height: 240px;
+        background-image: url('../images/Step\ foot.png');
+        position: relative;
+        display: flex;
+        align-self: flex-end;
+        justify-content: center;
+        background-size: cover;
+        background-position: center;
+        margin-top: 10px;
+    }
+    nav .main_picture .picture {
+        width: 300px;
+        height: 120px;
+        margin-top: 5px;
+        border-radius: 4px;
+        margin-left: 0;
+    }
+    nav .main_picture .picture_next-big {
+        width: 300px;
+        height: 120px;
+        margin-top: 5px;
+        border-radius: 4px;
+        margin-left: 0;
+    }
+    .d-flex-colum {
+        height: 40px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .d-flex-colum .color {
+        width: 301px;
+        background-color: #FF4E50;
+        margin-top: 2%;
+    }
+    .two {
+        margin-top: 2%;
+        text-align: center;
+    }
+    .text_footer_center {
+        margin-top: 15px;
+    }
+    .title-second-block {
+        display: flex;
+        justify-content: center;
+        margin-top: 6%;
+        text-align: center;
+        width: 287px;
+        margin: 0 auto;
+    }
+    .container .types-of-work .third-types {
+        margin-bottom: 9%;
+    }
+    .footer {
+        height: 246px;
+        margin-top: 11%;
+        .footer_title {
+            width: 213px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    }
+    footer {
+        border-top: 2px solid #FF4E50;
+        width: 100%;
+        height: 197px;
+        display: flex;
+        flex-direction: column;
+        .footer_title {
+            margin-top: 3%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: Montserrat;
+            .footer_logo {
+                height: 50px;
+                font-size: 10px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 12px;
+                letter-spacing: 1px;
+                text-align: center;
+                color: rgba(204, 204, 204, 1);
+                margin-top: 2%;
+                .img_footer {
+                    margin-top: -11px;
+                }
+            }
+            .footer_company {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                justify-content: center;
+                align-items: center;
+                .company-title {
+                    font-family: Montserrat;
+                    font-size: 14px;
+                    width: 130px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 17px;
+                    letter-spacing: 0px;
+                    text-align: center;
+                    margin-top: 2%;
+                }
+                .footer_company_names {
+                    width: 200px;
+                    height: 50px;
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    .text_foooter_company {
+                        font-family: Roboto;
+                        font-size: 14px;
+                        font-weight: 300;
+                        color: rgba(153, 153, 153, 1);
+                        margin: 3px;
+                    }
+                }
+            }
+            .names_images {
+                width: 130px;
+                text-align: center;
+                &-span {
+                    color: rgba(255, 78, 80, 1);
+                    font-family: Montserrat;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 20px;
+                    letter-spacing: 0px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width:690px) and (max-width: 760px) {
     .container-background .header_page__header {
         width: 271px;
         height: 178px;
