--- a/styles/main.css
+++ b/styles/main.css
@@ -1219,7 +1219,11 @@ footer .footer_title .names_images-span {
   }
 
   .menu .righ {
-    display: none;
+    color: #e4d83591;
+    margin: 0 auto;
+    position: absolute;
+    top: 32%;
+    left: 23%;
   }
 
   .container-background .header_page__header .header_page__h2 {
@@ -1467,7 +1471,11 @@ footer .footer_title .names_images-span {
   }
 
   .menu .righ {
-    display: none;
+    color: #e4d83591;
+    margin: 0 auto;
+    position: absolute;
+    top: 32%;
+    left: 28%;
   }
 
   .container-background .header_page__header .header_page__h2 {
@@ -1719,7 +1727,11 @@ footer .footer_title .names_images-span {
   }
 
   .menu .righ {
-    display: none;
+    color: #e4d83591;
+    margin: 0 auto;
+    position: absolute;
+    top: 37%;
+    left: 39%;
   }
 
   .container-background .header_page__header .header_page__h2 {
@@ -1971,7 +1983,11 @@ footer .footer_title .names_images-span {
   }
 
   .menu .righ {
-    display: none;
+    color: #e4d83591;
+    margin: 0 auto;
+    position: absolute;
+    top: 32%;
+    left: 33%;
   }
 
   .container-background .header_page__header .header_page__h2 {
@@ -2208,7 +2224,7 @@ footer .footer_title .names_images-span {
     height: 178px;
     position: absolute;
     top: 40%;
-    left: 27%;
+    left: 34%;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -2223,7 +2239,11 @@ footer .footer_title .names_images-span {
   }
 
   .menu .righ {
-    display: none;
+    color: #e4d83591;
+    margin: 0 auto;
+    position: absolute;
+    top: 32%;
+    left: 39%;
   }
 
   .container-background .header_page__header .header_page__h2 {
