--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1159,7 +1159,11 @@ footer {
         margin-top: 3%;
     }
     .menu .righ {
-        display: none;
+        color: $second-color;
+        margin: 0 auto;
+        position: absolute;
+        top: 32%;
+        left: 23%;
     }
     .container-background .header_page__header .header_page__h2 {
         font-family: Montserrat;
@@ -1394,7 +1398,11 @@ footer {
         margin-top: 3%;
     }
     .menu .righ {
-        display: none;
+        color: $second-color;
+        margin: 0 auto;
+        position: absolute;
+        top: 32%;
+        left: 28%;
     }
     .container-background .header_page__header .header_page__h2 {
         font-family: Montserrat;
@@ -1632,7 +1640,11 @@ footer {
         margin-top: 3%;
     }
     .menu .righ {
-        display: none;
+        color: $second-color;
+        margin: 0 auto;
+        position: absolute;
+        top: 37%;
+        left: 39%;
     }
     .container-background .header_page__header .header_page__h2 {
         font-family: Montserrat;
@@ -1870,7 +1882,11 @@ footer {
         margin-top: 3%;
     }
     .menu .righ {
-        display: none;
+        color: $second-color;
+        margin: 0 auto;
+        position: absolute;
+        top: 32%;
+        left: 33%;
     }
     .container-background .header_page__header .header_page__h2 {
         font-family: Montserrat;
@@ -2095,7 +2111,7 @@ footer {
         height: 178px;
         position: absolute;
         top: 40%;
-        left: 27%;
+        left: 34%;
         display: flex;
         justify-content: center;
         text-align: center;
@@ -2108,7 +2124,11 @@ footer {
         margin-top: 3%;
     }
     .menu .righ {
-        display: none;
+        color: $second-color;
+        margin: 0 auto;
+        position: absolute;
+        top: 32%;
+        left: 39%;
     }
     .container-background .header_page__header .header_page__h2 {
         font-family: Montserrat;
