--- a/main.css
+++ b/main.css
@@ -521,6 +521,10 @@ main {
   font-style: italic;
   text-decoration: underline;
 }
+.container_right .contact .message_mail:hover {
+  color: aqua;
+  text-decoration: none;
+}
 .container_right .contact .message_number {
   width: 40px;
   height: 50px;
@@ -921,5 +925,509 @@ main {
   100% {
     transform: scale(1);
     box-shadow: 0 0 0 10px rgba(243, 144, 144, 0.616);
+  }
+}
+@media screen and (min-width: 300px) and (max-width: 376px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 427px;
+    margin-bottom: 3%;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient_next {
+    font-weight: 600;
+    font-size: 2.2vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #13413d 10%, #d6a40f 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  header .images {
+    height: 375px;
+    width: 200px;
+    border-radius: 50%;
+    background-image: url(images/84755479_114657776762467_8127973901121617920_n.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-top: 2%;
+  }
+
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .container_right {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: none;
+  }
+
+  .container_left {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .container_left .my_practit {
+    text-align: center;
+    width: 100%;
+    font-size: 4vh;
+    line-height: 5vh;
+    color: blue;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .containe {
+    width: 100%;
+    /* height: 165%; */
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+@media screen and (min-width: 377px) and (max-width: 540px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 427px;
+    margin-bottom: 3%;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient_next {
+    font-weight: 600;
+    font-size: 2.2vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #13413d 10%, #d6a40f 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  header .images {
+    height: 375px;
+    width: 200px;
+    border-radius: 50%;
+    background-image: url(images/84755479_114657776762467_8127973901121617920_n.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-top: 2%;
+  }
+
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .container_right {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: none;
+  }
+
+  .container_left {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .container_left .my_practit {
+    text-align: center;
+    width: 100%;
+    font-size: 4vh;
+    line-height: 5vh;
+    color: blue;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .containe {
+    width: 100%;
+    /* height: 165%; */
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .container_right .contact {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 541px) and (max-width: 640px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 427px;
+    margin-bottom: 3%;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient_next {
+    font-weight: 600;
+    font-size: 2.2vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #13413d 10%, #d6a40f 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  header .images {
+    height: 375px;
+    width: 200px;
+    border-radius: 50%;
+    background-image: url(images/84755479_114657776762467_8127973901121617920_n.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-top: 2%;
+  }
+
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .container_right {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: none;
+  }
+
+  .container_left {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .container_left .my_practit {
+    text-align: center;
+    width: 100%;
+    font-size: 4vh;
+    line-height: 5vh;
+    color: blue;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .containe {
+    width: 100%;
+    /* height: 165%; */
+    display: flex;
+    justify-content: center;
+  }
+
+  .container_right .contact {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 641px) and (max-width: 720px) {
+  .container_right {
+    width: 37%;
+    border: none;
+  }
+
+  .container_left {
+    width: 61%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-evenly;
+    height: 200px;
+    margin-bottom: 3%;
+    width: 94%;
+  }
+
+  .containe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 9%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .icon {
+    position: relative;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: cadetblue;
+    border-radius: 100%;
+    margin: 0 12px;
+    -webkit-animation-name: show;
+    animation-name: show;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+}
+@media screen and (min-width: 721px) and (max-width: 920px) {
+  .container_right {
+    width: 37%;
+    border: none;
+  }
+
+  .container_left {
+    width: 61%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-evenly;
+    height: 200px;
+    margin-bottom: 3%;
+    width: 100%;
+  }
+
+  .containe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 9%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .icon {
+    position: relative;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: cadetblue;
+    border-radius: 100%;
+    margin: 0 12px;
+    -webkit-animation-name: show;
+    animation-name: show;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+}
+@media screen and (min-width: 921px) and (max-width: 1100px) {
+  .container_right {
+    width: 37%;
+  }
+
+  .container_left {
+    width: 61%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-evenly;
+    height: 200px;
+    margin-bottom: 3%;
+    width: 100%;
+  }
+
+  .containe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 9%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .icon {
+    position: relative;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: cadetblue;
+    border-radius: 100%;
+    margin: 0 12px;
+    -webkit-animation-name: show;
+    animation-name: show;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+}
+@media screen and (min-width: 1101px) and (max-width: 1230px) {
+  .container_right {
+    width: 37%;
+  }
+
+  .container_left {
+    width: 61%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-around;
+    height: 200px;
+    margin-bottom: 3%;
+    width: 98%;
+  }
+
+  .containe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 9%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .icon {
+    position: relative;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: cadetblue;
+    border-radius: 100%;
+    margin: 0 12px;
+    -webkit-animation-name: show;
+    animation-name: show;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+}
+@media screen and (min-width: 1231px) and (max-width: 1430px) {
+  .container_right {
+    width: 37%;
+  }
+
+  .container_left {
+    width: 61%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-around;
+    height: 200px;
+    margin-bottom: 3%;
+    width: 97%;
+  }
+
+  .containe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
+  }
+
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 9%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }/*# sourceMappingURL=main.css.map */
