--- a/main.scss
+++ b/main.scss
@@ -79,6 +79,7 @@ main {
             &:hover {
                 color: aqua;
                 text-decoration: none;
+                cursor: pointer;
             }
         }
         .message_number {
@@ -162,6 +163,7 @@ main {
     font-size: 4vh;
     line-height: 5vh;
     height: fit-content;
+    margin-top: 3%;
 }
 
 .checked {
@@ -363,7 +365,63 @@ main {
     }
 }
 
-@media screen and (min-width: 270px) and (max-width: 376px) {
+@media screen and (min-width: 270px) and (max-width: 299px) {
+    header .images {
+        height: 375px;
+        width: 200px;
+        border-radius: 50%;
+        background-image: url('images/84755479_114657776762467_8127973901121617920_n.jpg');
+        background-position: center;
+        background-size: cover;
+        margin-top: 6%;
+    }
+    .linear_gradient {
+        font-weight: 600;
+        margin-top: 20%;
+        font-size: 4vh;
+        font-style: italic;
+        background: linear-gradient( 135deg, #12BCB0 20%, #FABE0E 70%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    .linear_gradient_next {
+        font-weight: 600;
+        font-size: 1.9vh;
+        font-style: italic;
+        background: linear-gradient( 135deg, #13413d 10%, #d6a40f 70%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    .container_right .contact {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .container_right .contact .message_mail {
+        font-size: 2.7vh;
+        font-style: italic;
+        text-decoration: underline;
+    }
+    .container_left .my_practit {
+        text-align: center;
+        width: 100%;
+        font-size: 3vh;
+        line-height: 5vh;
+        color: blue;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content;
+    }
+    .about_me_education {
+        text-align: center;
+        font-size: 2.9vh;
+        line-height: 5vh;
+    }
+}
+
+@media screen and (min-width: 300px) and (max-width: 376px) {
     header {
         display: flex;
         flex-direction: column;
@@ -441,6 +499,11 @@ main {
         display: flex;
         justify-content: flex-end;
     }
+    .container_right .contact {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 @media screen and (min-width: 377px) and (max-width: 540px) {
@@ -459,6 +522,7 @@ main {
     .linear_gradient_next {
         font-weight: 600;
         font-size: 2.2vh;
+        margin-top: 17%;
         font-style: italic;
         background: linear-gradient( 135deg, #13413d 10%, #d6a40f 70%);
         -webkit-background-clip: text;
@@ -508,7 +572,7 @@ main {
     }
     .container_right .contact {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
 }
@@ -578,7 +642,7 @@ main {
     }
     .container_right .contact {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
 }
