--- a/main.css
+++ b/main.css
@@ -930,36 +930,106 @@ main {
     box-shadow: 0 0 0 10px rgba(243, 144, 144, 0.616);
   }
 }
-@media screen and (min-width: 270px) and (max-width: 299px) {
-  header .images {
-    height: 375px;
-    width: 200px;
-    border-radius: 50%;
-    background-image: url("images/84755479_114657776762467_8127973901121617920_n.jpg");
-    background-position: center;
-    background-size: cover;
-    margin-top: 6%;
+@media screen and (min-width: 260px) and (max-width: 309px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 427px;
+    margin-bottom: 3%;
   }
 
-  .linear_gradient {
-    font-weight: 600;
-    margin-top: 20%;
-    font-size: 4vh;
+  .languare_Me {
+    margin-top: 3%;
+    font-size: 3.5vh;
+    line-height: 6vh;
+    text-align: center;
     font-style: italic;
-    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: rgba(0, 0, 0, 0.925);
+  }
+
+  .icon {
+    position: relative;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background: cadetblue;
+    border-radius: 100%;
+    margin: 0 12px;
+    -webkit-animation-name: show;
+    animation-name: show;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+
+  header .names_size {
+    font-size: 7vh;
+    text-align: center;
   }
 
   .linear_gradient_next {
     font-weight: 600;
-    font-size: 1.9vh;
+    font-size: 1.7vh;
     font-style: italic;
     background: linear-gradient(135deg, #13413d 10%, #d6a40f 70%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+
+  header .images {
+    height: 375px;
+    width: 200px;
+    border-radius: 50%;
+    background-image: url(images/84755479_114657776762467_8127973901121617920_n.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-top: 2%;
+  }
+
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .container_right {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    border: none;
+  }
+
+  .container_left {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .container_left .my_practit {
+    text-align: center;
+    width: 100%;
+    font-size: 4vh;
+    line-height: 5vh;
+    color: blue;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .containe {
+    width: 100%;
+    /* height: 165%; */
+    display: flex;
+    justify-content: flex-end;
   }
 
   .container_right .contact {
@@ -968,8 +1038,19 @@ main {
     align-items: center;
   }
 
+  .linear_gradient {
+    font-weight: 600;
+    margin-top: 27%;
+    font-size: 4vh;
+    font-style: italic;
+    background: linear-gradient(135deg, #12BCB0 20%, #FABE0E 70%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   .container_right .contact .message_mail {
-    font-size: 2.7vh;
+    font-size: 3vh;
     font-style: italic;
     text-decoration: underline;
   }
@@ -987,11 +1068,11 @@ main {
 
   .about_me_education {
     text-align: center;
-    font-size: 2.9vh;
+    font-size: 2.6vh;
     line-height: 5vh;
   }
 }
-@media screen and (min-width: 300px) and (max-width: 376px) {
+@media screen and (min-width: 310px) and (max-width: 376px) {
   header {
     display: flex;
     flex-direction: column;
